--- a/src/components/householdmembers.css
+++ b/src/components/householdmembers.css
@@ -1,24 +1,15 @@
-/* HouseholdMembers.css */
-
-/* Define colors from the provided palette */
-:root {
-  --soft-blue: #6FA3EF;
-  --soft-green: #A4D65E;
-  --warm-neutral: #E5E5E5;
-  --coral: #FFA07A;
-}
 
 .household-members-container {
   margin-top: 20px;
   padding: 15px;
   background-color: #fff; /* Using a neutral background for the container */
-  border: 1px solid var(--soft-blue); /* Border color updated to Soft Blue */
+  border: 1px solid #413c3c; /* Border color updated to Soft Blue */
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .household-members-title {
-  color: var(--soft-green);
+  color: #504242;
 }
 
 .household-members-list {
@@ -27,12 +18,12 @@
 }
 
 .household-member-item {
-  background-color: var(--soft-blue); /* Updated to Soft Blue */
-  border: 1px solid var(--warm-neutral);
+  background-color: #8D8573;
+  color: #3d2222;
+  border: 1px solid #796969;
   margin-bottom: 5px;
   padding: 10px;
   border-radius: 4px;
-  color: #333; /* Text color for better contrast */
 }
 
 .add-member-form {
@@ -46,12 +37,13 @@
   padding: 10px;
   border: 1px solid var(--warm-neutral);
   border-radius: 4px;
-  margin-bottom: 10px;
+  margin: 10px;
 }
 
 .add-member-button {
-  background-color: var(--soft-blue);
+  background-color: #45a049;
   color: #fff;
+  font-weight: bold;
   padding: 10px;
   border: 1px solid var(--soft-blue);
   border-radius: 4px;
@@ -59,5 +51,5 @@
 }
 
 .error-message {
-  color: var(--coral);
+  color: red;
 }
